gateway.yaml
  apiVersion: networking.istio.io/v1beta1
  kind: Gateway
  metadata:
    creationTimestamp: "2022-08-25T07:48:13Z"
    generation: 2
    name: nginx-gateway
    namespace: dataplane
    resourceVersion: "1179395"
    uid: a62d02c4-ccfd-4b06-b582-d01e177245b0
  spec:
    selector:
      istio: ingressgateway
    servers:
    - hosts:
      - '*'
      port:
        name: nginx-http-traffic
        number: 30210
        protocol: HTTP
    - hosts:
      - '*'
      port:
        name: nginx-tls-termination
        number: 30211
        protocol: TLS
      tls:
        credentialName: nginx-istio-secrets
        mode: SIMPLE
